feat: shutdown hook and fix import-vars for macros